<resources>
    <string name="app_name">VoiceEars</string>

    /* MainActivity */
    <string name="main_button_synthesize_text">Speak</string>
    <string name="main_editText_synthesize_hint">Type a message</string>
    <string name="main_imageView_scrollDown_contentDescription">scroll down</string>
    <string name="main_imageView_loading_contentDescription">loading</string>
    <string name="main_imageButton_synthesize_contentDescription">Speak</string>

    <string name="welcome">Welcome to VoiceEars. Start speaking or typing to use this app.</string>
    <string name="toast_blank_key_or_region">Enter the subscription key and region to start using this app.</string>
    <string name="toast_invalid_key_or_region">Failed to authenticate. Check your network connection or settings and try again.</string>
    <string name="alert_permission_microphone_request_message">Allow this app to record your audio to enable Speech-to-text.</string>
    <string name="toast_permission_microphone_denied">WARNING: Speech-to-text is disabled. To enable it, go to Settings and allow this app to access your microphone and restart the app.</string>

    /* Main Menu */
    <string name="action_mirror_title">MirrorText</string>
    <string name="action_gender_title_male">Gender: Male</string>
    <string name="action_gender_title_female">Gender: Female</string>
    <string name="action_settings_title">Settings</string>
    <string name="action_auto_tts_title_on">Auto TTS: On</string>
    <string name="action_auto_tts_title_off">Auto TTS: Off</string>
    <string name="action_audio_speed_title">Speed</string>
    <string name="action_presentation_title">Presentation Mode</string>

    /* SettingsActivity */
    <string name="settings_textView_title">Azure Cognitive Services</string>
    <string name="settings_textView_key_text">API Key:</string>
    <string name="settings_editText_key_hint">api key</string>
    <string name="settings_textView_region_text">Region:</string>
    <string name="settings_editText_region_hint">region</string>
    <string name="settings_textView_message"><![CDATA[Create a Cognitive Services service in Azure Portal and go to Resource Management > Keys to get your subscription key.]]></string>
    <string name="settings_button_save">SAVE</string>

    /* MirrorActivity */
    <string name="mirror_imageButton_mode_contentDescription">Toggle mode</string>
    <string name="mirror_imageButton_clear_contentDescription">Clear the text</string>
    <string name="mirror_editText_original_hint">Type something</string>

    /* PresentationActivity */
    <string name="presentation_imageButton_delete_contentDescription">Delete</string>
    <string name="presentation_imageButton_edit_contentDescription">Edit the text</string>
    <string name="presentation_imageButton_add_contentDescription">Add new text</string>
    <string name="presentation_button_play_text">PLAY AUDIO</string>
    <string name="presentation_context_menu_edit">Edit</string>
    <string name="presentation_context_menu_delete">Delete</string>

    /* PresentationMessageActivity */
    <string name="presentation_message_editText_hint">Presentation message</string>
    <string name="presentation_message_editText_hint_new">New message</string>
    <string name="presentation_message_button_save">Save</string>
    <string name="presentation_message_button_create">Create</string>
    <string name="presentation_message_button_cancel">Cancel</string>

    /* shortcuts */
    <string name="mirror_shortcut_short_label">MirrorText</string>

    /* common */
    <string name="network_error">Error: Check your network connection or settings and try again.</string>
    <string name="presentation_context_menu_delete_all">Delete All</string>
</resources>
