<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/action_mirror"
            android:orderInCategory="10"
            android:icon="@drawable/ic_mirror"
            android:title="@string/action_mirror_title"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_gender"
            android:orderInCategory="20"
            android:icon="@drawable/ic_boy"
            android:title="@string/action_gender_title_male"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_auto_mode"
            android:orderInCategory="25"
            android:title="Auto Mode: Off"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_audio_speed"
            android:orderInCategory="30"
            android:title="Speed: 1.0x"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_presentation"
            android:orderInCategory="40"
            android:title="Presentation Mode"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings_title"
            app:showAsAction="never" />
</menu>