<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView_message"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ImageView
        android:id="@+id/imageView_scrolldown"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/main_imageView_scrolldown_contentDescription"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/down_arrow" />

    <ImageView
        android:id="@+id/imageView_loading"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/main_imageView_loading_contentDescription"
        android:background="@drawable/loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView_message"
        app:layout_constraintEnd_toEndOf="parent" />


    <SeekBar
        android:id="@+id/seekBar_textSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:max="50"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_message" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editText_synthesize"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_editText_synthesize_hint"
            android:inputType="textShortMessage|textAutoCorrect|text" />

        <ImageButton
            android:id="@+id/imageButton_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mirror_imageButton_clear_contentDescription"
            app:srcCompat="@drawable/clear"/>

        <Button
            android:id="@+id/button_synthesize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_synthesize_text"
            app:layout_constraintStart_toEndOf="@id/editText_synthesize" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>